--- a/html/index.html
+++ b/html/index.html
@@ -8,3 +8,5 @@
   </div>
 </body>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script>
+</script>
