automatically backed up by learn

--- a/html/index.html
+++ b/html/index.html
@@ -9,5 +9,5 @@
 </body>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 <script>
-  $('#img').prepend('<img id="weirdKid" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
+  $('#img').append('<img id="weirdKid" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
 </script>
